# biscuitcutter

./: .biscuit  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: pytest.yml
biscuitcutter/: __init__.py  biscuitcutter.py  examples.py
biscuitcutter/tests/: test_biscuitcutter.py
docs/pages/doctrees/: Documentation.doctree  Examples.doctree  Installation.doctree  biscuitcutter.biscuitcutter.doctree  environment.pickle  index.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Documentation.html  Examples.html  Installation.html  biscuitcutter.biscuitcutter.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: biscuitcutter.biscuitcutter.rst.txt  index.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Documentation.rst  Examples.rst  Installation.rst  conf.py
